--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@
       <div id="u127" class="ax_default paragraph">
         <div id="u127_div" class=""></div>
         <div id="u127_text" class="text ">
-          <ul><li style=""><span>9年互联网行业、7年产品工作经验，熟悉外贸B2B、国际物流、交通出行、智慧城市及相关衍生的行业领域，精通Axure高保真原型设计。</span></li><li style=""><span>曾多次参与省、市级政府、国企单位项目，独立负责过各类web、APP、微信小程序、C/S客户端产品设计，整个产品线从概念到上线、交付有丰富的经验。</span></li><li style=""><span>拓展技能：熟悉前端开发：熟练掌握HTML、CSS、javascript、jQuery、Bootstrap和ElementUI，能使用vueJS框架独立完成比较简单的小型项目。</span></li><li style=""><span>拓展技能：熟悉SEM（百度、google、facebook）、SEO（谷歌排名：包括站群建设与推广）</span></li></ul>
+          <ul><li style=""><span>9年互联网行业、7年产品工作经验，熟悉外贸B2B、国际物流、交通出行、智慧城市及相关衍生的行业领域，擅长Axure高保真原型设计。</span></li><li style=""><span>曾多次参与省、市级政府、国企单位项目，独立负责过各类web、APP、微信小程序、C/S客户端产品设计，整个产品线从概念到上线、交付有丰富的经验。</span></li><li style=""><span>拓展技能：熟悉前端开发：熟练掌握HTML、CSS、javascript、jQuery、Bootstrap和ElementUI，能使用vueJS框架独立完成比较简单的小型项目。</span></li><li style=""><span>拓展技能：熟悉SEM（百度、google、facebook）、SEO（谷歌排名：包括站群建设与推广）</span></li></ul>
         </div>
       </div>
 
