--- a/about.html
+++ b/about.html
@@ -159,8 +159,8 @@
       <div id="u111" class="ax_default paragraph">
         <div id="u111_div" class=""></div>
         <div id="u111_text" class="text ">
-          <p><span>本站原计划是主要发布一些高阶Axure教程，偶尔记录些粗浅的前端知识、其它杂文。<br>注：初学者勿过份执着于“高保真”原型设计，本站教程仅适用原型设计深入爱好者，需懂些前端知识(基础CSS和JS即可)。当然，不会也不要紧，同样可以学习，发散思维。</span></p>
-        </div>
+          <p><span>本站主要发布Axure高阶教程，偶尔记录些粗浅的前端知识、其它杂文。<br>注：初学者勿过份执着于“高保真”原型设计，本站教程仅适用原型设计深入爱好者，需懂些前端知识(基础CSS和JS即可)。当然，不会也不要紧，同样可以学习，发散思维。</span></p>
+        </div>高阶
       </div>
 
       <!-- Unnamed (矩形) -->
