--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Axure成长日记 | 关于</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>  
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
@@ -160,7 +160,7 @@
         <div id="u111_div" class=""></div>
         <div id="u111_text" class="text ">
           <p><span>本站主要发布Axure高阶教程，偶尔记录些粗浅的前端知识、其它杂文。<br>注：初学者勿过份执着于“高保真”原型设计，本站教程仅适用原型设计深入爱好者，需懂些前端知识(基础CSS和JS即可)。当然，不会也不要紧，同样可以学习，发散思维。</span></p>
-        </div>高阶
+        </div>
       </div>
 
       <!-- Unnamed (矩形) -->
